# Dump-Protocol-Algorithms

./: .gitignore  README.md
Algorithms/character_frequency_flattening/: Cargo.toml
Algorithms/character_frequency_flattening/src/: lib.rs
Algorithms/encoding_corruption/: Cargo.toml
Algorithms/encoding_corruption/src/: lib.rs
Algorithms/linguistic_pattern_destruction/: Cargo.toml
Algorithms/metadata/: Cargo.toml
Algorithms/metadata/src/: lib.rs
Algorithms/sharding/: Cargo.toml
Algorithms/sharding/src/: lib.rs
Iterations/: iter_1.md
encoding_corruption/: Cargo.toml
