[package]
name = "linguistic_pattern_destruction"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
sha3 = "0.10"
sha2 = "0.10"
aes = "0.8"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
zeroize = { version = "1.7", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
aes-ctr = "0.6"
hmac = "0.12"
unicode-normalization = "0.1"
thiserror = "1.0"
ctr = "0.9"
unicode-segmentation = "1.10"
# Additional dependencies for sharding algorithm
digest = "0.10"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Crypto",
  "SubtleCrypto",
]